--- a/views/index.html
+++ b/views/index.html
@@ -13,10 +13,9 @@
 
     <!-- Bootstrap core CSS -->
     <link href="/css/bootstrap.min.css" rel="stylesheet">
-
     <!-- Custom styles for this template -->
     <link href="/css/index.css" rel="stylesheet">
-    
+
   </head>
 
   <body>
@@ -30,11 +29,11 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">Project name</a>
+          <a class="navbar-brand" href="#">FilmSPA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a href="#">Search</a></li>
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact</a></li>
           </ul>
@@ -51,6 +50,10 @@
             Enter the name of the film you wish for! <input type="text" name="name">
           </form>
       </div>
+
+      <div class="results-hanger">
+      </div>
+      
     </div><!-- /.container -->
 
 
