--- a/views/index.html
+++ b/views/index.html
@@ -50,14 +50,33 @@
             Enter the name of the film you wish for! <input type="text" name="name">
           </form>
       </div>
-
+      <div class="details-hanger">
+      </div>
       <div class="search-results">
         <table class="table" id="results-hanger">
-          <tr>
-            <td>Star Wars: Episode VI - Return of the Jedi</td>
+<!--           <tr>
+            <td><a href="" data="tt0076759">Star Wars: Episode VI - Return of the Jedi</a></td>
             <td>1983</td>
             <td>Favorite</td>
           </tr>
+          
+          <tr>
+            <td>
+              <div class="row details">
+                <div class="col-md-4">
+                  <div class="thumbnail">
+                    <img src="http://ia.media-imdb.com/images/M/MV5BMjE2MzQwMTgxN15BMl5BanBnXkFtZTcwMDQzNjk2OQ@@._V1_SX300.jpg" alt="..." class="img img-responsive">
+                    <div class="caption">
+                      <h3>Star Wars: Episode V - The Empire Strikes Back</h3>
+                      <p>"After the Rebel base on the icy planet Hoth is taken over by the empire, Han, Leia, Chewbacca, and C-3PO flee across the galaxy from the Empire. Luke travels to the forgotten planet of Dagobah to receive training from the Jedi master Yoda, while Vader endlessly pursues him."</p>
+                      <p><a href="#" class="btn btn-default" role="button">Close</a> <a href="#" class="btn btn-primary" role="button">Favorite</a> </p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </td>
+          </tr> -->
+
         </table>
       </div>
 
