--- a/views/index.html
+++ b/views/index.html
@@ -47,15 +47,15 @@
         <h1> Filmspa! </h1>
 
           <form>
-            Enter the name of the film you wish for! <input type="text" name="name">
+            <input type="text" name="name">
           </form>
       </div>
       <div class="search-results">
         <table class="table" id="results-hanger">
-          <!-- <tr>
+<!--           <tr>
             <td><a href="" data="tt0076759" data-toggle="modal" data-target="#myModal">Star Wars: Episode VI - Return of the Jedi</a></td>
             <td>1983</td>
-            <td>Favorite</td>
+            <td><a href="#" class="btn btn-success" role="button">Favorite</a></td>
           </tr> -->
           <!-- 
           <tr>
@@ -90,7 +90,7 @@
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
-        <button type="button" class="btn btn-primary">Save To Favorites</button>
+        <button type="button" class="btn btn-primary save">Save To Favorites</button>
       </div>
     </div>
   </div>
