--- a/views/index.html
+++ b/views/index.html
@@ -29,11 +29,12 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">FilmSPA</a>
+          <a class="navbar-brand" href="/">FilmSPA</a>
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li class="active"><a href="/">Search</a></li>
+            <li><a href="favorites">Favorites</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="contact.html">Contact</a></li>
           </ul>
